deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: docs-app
spec:
  type: ClusterIP
  selector:
    app: docs-app
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: http
